@@ -87,8 +87,6 @@ config/auto/aio.pm                                []
 config/auto/aio/aio.in                            []
 config/auto/alignptrs.pm                          []
 config/auto/alignptrs/test_c.in                   []
-config/auto/antlr.pm                              []
-config/auto/antlr/test_python.g                   []
 config/auto/bc.pm                                 []
 config/auto/byteorder.pm                          []
 config/auto/byteorder/test_c.in                   []
